--- a/app/src/main/res/layout/item_analysis.xml
+++ b/app/src/main/res/layout/item_analysis.xml
@@ -16,28 +16,28 @@
 
         <!-- 分析标题 -->
         <TextView
-            android:id="@+id/analysisTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Spending Analysis"
-            android:textSize="18sp"
-            android:textColor="@color/green"
-            android:textStyle="bold"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <!-- 分析内容 -->
-        <TextView
-            android:id="@+id/analysisContent"
+            android:id="@+id/analysisTitleText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Your spending on dining out is 30% of your total expenditure. Consider cooking at home to save costs."
-            android:textSize="14sp"
+            android:text="Title"
+            android:textSize="18sp"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <!-- 分析描述 -->
+        <TextView
+            android:id="@+id/analysisDescriptionText"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Description"
+            android:textSize="16sp"
             android:textColor="@color/gray"
-            app:layout_constraintTop_toBottomOf="@id/analysisTitle"
+            app:layout_constraintTop_toBottomOf="@id/analysisTitleText"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0"
             android:layout_marginTop="8dp" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
