--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -49,12 +49,12 @@
             <!-- 标题 -->
             <TextView
                 android:id="@+id/registerTitle"
+                android:fontFamily="@font/zhishuai"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/register_title"
                 android:textSize="24sp"
-                android:textStyle="bold"
-                android:textColor="@color/black"
+                android:textColor="@color/green"
                 android:layout_gravity="center_horizontal" />
 
             <!-- 间距 -->
@@ -65,6 +65,7 @@
             <!-- 邮箱输入框 -->
             <EditText
                 android:id="@+id/emailEditText"
+                android:fontFamily="@font/zhishuai"
                 android:layout_width="match_parent"
                 android:layout_height="45dp"
                 android:hint="@string/register_email_hint"
@@ -76,6 +77,7 @@
             <!-- 密码输入框 -->
             <EditText
                 android:id="@+id/passwordEditText"
+                android:fontFamily="@font/zhishuai"
                 android:layout_width="match_parent"
                 android:layout_height="45dp"
                 android:hint="@string/register_password_hint"
@@ -88,6 +90,7 @@
             <!-- 确认密码输入框 -->
             <EditText
                 android:id="@+id/confirmPasswordEditText"
+                android:fontFamily="@font/zhishuai"
                 android:layout_width="match_parent"
                 android:layout_height="45dp"
                 android:hint="@string/register_confirm_password_hint"
@@ -100,21 +103,22 @@
             <!-- 注册按钮 -->
             <Button
                 android:id="@+id/registerButton"
+                android:fontFamily="@font/zhishuai"
                 android:layout_width="match_parent"
                 android:layout_height="45dp"
                 android:text="@string/register_button"
-                android:backgroundTint="@color/primaryColor"
+                android:backgroundTint="@color/green"
                 android:textColor="@color/white"
                 android:layout_marginTop="24dp" />
 
             <!-- 返回登录链接 -->
             <TextView
                 android:id="@+id/loginLink"
+                android:fontFamily="@font/zhishuai"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/already_have_account"
-                android:textColor="@color/primaryColor"
-                android:textStyle="bold"
+                android:textColor="@color/green"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="16dp" />
         </LinearLayout>
