--- a/app/src/main/res/layout/dialog_add_billing.xml
+++ b/app/src/main/res/layout/dialog_add_billing.xml
@@ -9,10 +9,12 @@
 
     <Button
         android:id="@+id/datePickerButton"
+        android:backgroundTint="@color/green"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:text="Select Date"
+        android:fontFamily="@font/zhishuai"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,6 +22,7 @@
 
     <Spinner
         android:id="@+id/typeSpinner"
+        android:fontFamily="@font/zhishuai"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -34,6 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:hint="备注"
+        android:fontFamily="@font/zhishuai"
         android:inputType="text"
         android:padding="8dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -44,6 +48,7 @@
     <!-- 金额输入 -->
     <EditText
         android:id="@+id/amountInput"
+        android:fontFamily="@font/zhishuai"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -56,6 +61,8 @@
     <!-- 保存按钮 -->
     <Button
         android:id="@+id/saveButton"
+        android:backgroundTint="@color/green"
+        android:fontFamily="@font/zhishuai"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
