--- a/app/src/main/res/layout/item_billing.xml
+++ b/app/src/main/res/layout/item_billing.xml
@@ -17,6 +17,7 @@
         <!-- 月份 -->
         <TextView
             android:id="@+id/monthText"
+            android:fontFamily="@font/zhishuai"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="November"
@@ -29,6 +30,7 @@
         <!-- 日期 -->
         <TextView
             android:id="@+id/dateText"
+            android:fontFamily="@font/zhishuai"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="1"
@@ -41,6 +43,7 @@
         <!-- 收支类型 -->
         <TextView
             android:id="@+id/typeText"
+            android:fontFamily="@font/zhishuai"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Incomes"
@@ -53,6 +56,7 @@
         <!-- 详细描述 -->
         <TextView
             android:id="@+id/descriptionText"
+            android:fontFamily="@font/zhishuai"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="wage"
@@ -65,6 +69,7 @@
         <!-- 金额 -->
         <TextView
             android:id="@+id/amountText"
+            android:fontFamily="@font/zhishuai"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="$2000.00"
